Updated with version: 4.33.0 changes

--- a/adblock-betafish/adblock.css
+++ b/adblock-betafish/adblock.css
@@ -18,7 +18,8 @@ Global Styles
   --red1: #ce0707;
   --red2: #e40d0d;
   --red3: #ff363b;
-  --blue1: #2284f7;
+  --red4: #ff363b;
+  --blue1: #0047ff;
   --blue2: #03bcfc;
   --blue3: #4ecdf9;
   --yellow1: #ff9c00;
@@ -43,7 +44,8 @@ Global Styles
   --popup-button: #ffca00;
   --popup-button-text: #666666;
   --popup-button-disabled-text: #666666;
-  --popup-link-text: #2284f7;
+  --popup-link-text: var(--blue1);
+  --popup-link-text-decoration: none;
   --popup-divider-line-color: #e6e6e6;
   --popup-button-background-color: #f4f4f4;
   --popup-button-outline-color: var(--gray4);
