--- a/adblock-betafish/button/help.css
+++ b/adblock-betafish/button/help.css
@@ -51,10 +51,7 @@
 #help_footer {
   font-size: 13px;
   color: var(--popup-link-text);
-}
-
-#help_footer:hover {
-  color: var(--block-count-color);
+  text-decoration: none;
 }
 
 .popup-footer {
