--- a/adblock-betafish/options/color_themes.css
+++ b/adblock-betafish/options/color_themes.css
@@ -10,7 +10,8 @@
   --block-count-color: var(--red3);
   --popup-button-text: white;
   --popup-button-disabled-text: #333333;
-  --popup-link-text: var(--gray4);
+  --popup-link-text: var(--red4);
+  --popup-link-text-decoration: none;
   --premium-badge-text-color: var(--gray2);
   --premium-badge-border-color: var(--gray2);
   --popup-background-color: var(--gray1);
@@ -98,6 +99,7 @@
   --popup-button-text: var(--gray2);
   --popup-button-disabled-text: #666666;
   --popup-link-text: var(--blue1);
+  --popup-link-text-decoration: none;
   --popup-divider-line-color: var(--gray5);
   --popup-button-background-color: var(--gray6);
   --popup-button-outline-color: var(--gray4);
@@ -179,7 +181,8 @@
   --disabled-link-color: #c6c6c6;
   --popup-button-text: #90a2a2;
   --popup-button-disabled-text: #666666;
-  --popup-link-text: #90a2a2;
+  --popup-link-text: var(--red4);
+  --popup-link-text-decoration: none;
   --popup-divider-line-color: #366066;
   --popup-button-background-color: #002c38;
   --popup-button-outline-color: #90a2a2;
@@ -265,7 +268,8 @@
   --disabled-link-color: #c6c6c6;
   --popup-button-text: #76898d;
   --popup-button-disabled-text: #666666;
-  --popup-link-text: #6d8288;
+  --popup-link-text: var(--red3);
+  --popup-link-text-decoration: none;
   --popup-divider-line-color: #eee8d5;
   --popup-button-background-color: #eee8d5;
   --popup-button-outline-color: #ddd5bd;
@@ -350,7 +354,8 @@
   --disabled-link-color: #c6c6c6;
   --popup-button-text: white;
   --popup-button-disabled-text: #666666;
-  --popup-link-text: white;
+  --popup-link-text: #4ecdf9;
+  --popup-link-text-decoration: none;
   --popup-divider-line-color: #b399cc;
   --popup-button-background-color: #48226e;
   --popup-button-outline-color: #b399cc;
@@ -385,6 +390,7 @@
   --popup-button-text: white;
   --popup-button-disabled-text: #666666;
   --popup-link-text: white;
+  --popup-link-text-decoration: underline;
   --popup-divider-line-color: #f18686;
   --popup-button-background-color: var(--red1);
   --popup-button-outline-color: #f18686;
@@ -424,6 +430,7 @@
   --popup-button-text: white;
   --popup-button-disabled-text: #666666;
   --popup-link-text: white;
+  --popup-link-text-decoration: underline;
   --popup-divider-line-color: #81defe;
   --popup-button-background-color: var(--blue1);
   --popup-button-outline-color: #c6c6c6;
@@ -462,7 +469,8 @@
   --disabled-link-color: #c6c6c6;
   --popup-button-text: white;
   --popup-button-disabled-text: #666666;
-  --popup-link-text: white;
+  --popup-link-text: #ffd780;
+  --popup-link-text-decoration: none;
   --popup-divider-line-color: #ffd780;
   --popup-button-background-color: #ff9c00;
   --popup-button-outline-color: #c6c6c6;
