--- a/adblock-betafish/options/tabs.css
+++ b/adblock-betafish/options/tabs.css
@@ -123,3 +123,7 @@
     color: #999999;
   }
 }
+/* RTL Language Specific rules */
+html[dir="rtl"] #sidebar-tabs .tablink {
+  padding: 2px 9px;
+}
