--- a/adblock-betafish/options/mab.css
+++ b/adblock-betafish/options/mab.css
@@ -42,6 +42,7 @@
   line-height: normal;
   border-radius: 6px 6px 0 0;
   background-color: var(--mab-feature-card-header-locked-bg);
+  padding: 0px 24px;
 }
 .mab-feature:not(.teaser):not(.locked) .mab-feature-header {
   color: var(--mab-feature-card-header-text-color);
