--- a/adblock-betafish/button/help.css
+++ b/adblock-betafish/button/help.css
@@ -2,20 +2,29 @@
 
 #help_overlay {
   font-size: 15px;
-  margin: 0px 0px;
-  width: 320px;
-  height: 260px;
+  margin: 16px;
+  width: 288px;
+  height: 360px;
   max-height: 606px;
   display: none;
+  background-color: var(--popup-card-background-color);
+  border-radius: 4px;
+  flex-direction: column;
+}
+
+#help_container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .material-icons.button-icon {
   margin-right: 4px;
-  color: var(--popup-button-text);
+  color: var(--popup-button-reenable-text-color);
 }
 
 .material-icons {
-  color: var(--popup-menu--main-text-color);
+  color: var(--popup-main-text-color);
 }
 
 /* HEADER */
@@ -48,21 +57,21 @@
 
 /* FOOTER */
 
-#help_footer {
+#help_footer,
+#dc_help_footer {
   font-size: 13px;
   color: var(--popup-link-text);
   text-decoration: none;
+  cursor: pointer;
+  margin-bottom: 3px;
 }
 
 .popup-footer {
-  align-items: center;
-  justify-content: center;
   text-align: center;
   width: 100%;
-  position: absolute;
-  bottom: 0;
   background-color: var(--popup-menu--block-ads-bg-color);
-  padding: 10px 4px 10px 10px;
+  flex-shrink: 0;
+  margin-bottom: 8px;
 }
 
 /* CONTENT */
@@ -73,6 +82,22 @@
   justify-content: space-between;
   height: 186px;
   padding-top: 10px;
+  flex: 1 0 auto;
+}
+
+#text_container {
+  overflow-y: auto;
+}
+
+#text_container::-webkit-scrollbar {
+  width: 8px;
+}
+#msgText::-webkit-scrollbar-track {
+  background-color: var(--popup-card-background-color);
+}
+#text_container::-webkit-scrollbar-thumb {
+  background-color: var(--popup-accent-color);
+  border-radius: 6px;
 }
 
 .help-content {
@@ -109,17 +134,30 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 10px 0;
+  padding-top: 5px;
+  margin-bottom: 25px;
+  margin-top: 10px;
 }
 
 button {
   border-radius: 3px;
   border-width: 0;
-  background-color: var(--popup-button);
-  color: var(--popup-button-text);
+  background-color: var(--popup-help-button-bg-color);
+  color: var(--popup-button-reenable-text-color);
   width: 185px;
   height: 45px;
   font-size: 15px;
+}
+
+button.help-button {
+  border-radius: 4px;
+  border-width: 0;
+  background-color: var(--popup-help-button-bg-color);
+  color: var(--popup-button-reenable-text-color);
+  width: 120px;
+  height: 36px;
+  font-size: 13px;
+  font-weight: bold;
 }
 
 button.multiple-button {
@@ -135,13 +173,57 @@ button.multiple-button .button-text {
 }
 
 button:disabled {
-  background-color: var(--popup-menu--main-text-color);
+  background-color: var(--popup-button-disabled-background-color);
   opacity: 0.5;
   color: var(--popup-button-disabled-text);
 }
 
 button:hover {
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.secondary {
+  background-color: var(--popup-card-background-color);
+  color: var(--popup-button-secondary-text);
+  border: 1px solid var(--popup-button-secondary-text);
+  border-radius: 4px;
+  width: 185px;
+  height: 32px;
+  font-size: 13px;
+  font-weight: normal;
+}
+/* Checkboxes */
+
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 15px;
+}
+
+.disabledCheckbox-container {
+  display: flex;
+  justify-content: left;
+  flex-direction: row;
+  width: 100%;
+  padding-left: 15px;
+}
+
+.checkbox-row {
+  padding-bottom: 5px;
+}
+
+.url-info {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+  overflow-wrap: anywhere;
+}
+.disabledCheckbox {
+  color: #4c8bf5;
+  cursor: default;
+  margin-right: 10px;
 }
 
 /* ANIMATIONS */
