--- a/adblock-betafish/options/options.css
+++ b/adblock-betafish/options/options.css
@@ -56,6 +56,14 @@ a .link-text-color:hover {
 .sync-message-container {
   height: 40px;
 }
+.newLabelText {
+  background: #ffca00;
+  border-radius: 2px;
+  padding: 0px 5px 0px 5px;
+  color: #333333;
+  font-size: 13px;
+  font-weight: bold;
+}
 
 /* GENERAL */
 
@@ -1167,6 +1175,133 @@ section .theme-section-row {
   text-transform: uppercase;
   white-space: pre;
   margin-top: 6px;
+}
+
+/* Distraction Control */
+
+#distractioncontrol .page-title {
+  display: inline-flex;
+}
+
+#distractioncontrol .page-title .newLabelText {
+  margin-right: 10px;
+}
+
+.dc_subscription {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: none;
+}
+.dc_subscription.locked:hover {
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 12px;
+}
+.distraction-control-sub-title {
+  font-size: 18px;
+  line-height: 25px;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  font-weight: normal;
+}
+.distraction-control-warning {
+  font-size: 14px;
+  line-height: 25px;
+  margin-top: 5px;
+  margin-bottom: 45px;
+  background: var(--dc-warning-bg-color);
+  color: var(--dc-warning-color);
+  border-radius: 5px;
+  flex-direction: row;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+.distraction-control-warning-message {
+  margin: 11px 18px;
+  flex-basis: 85%;
+}
+.distraction-control-warning-button {
+  flex-basis: 15%;
+}
+#distraction-control-warning-button {
+  width: 90px;
+  border-radius: 6px;
+  border: 1px solid var(--dc-warning-color);
+  font-weight: bold;
+  font-size: 16px;
+}
+#dc_more_information_link {
+  cursor: pointer;
+}
+.filter-subscription-wrapper {
+  display: block;
+  cursor: pointer;
+}
+.filter-subscription-wrapper.locked:hover {
+  border-top-style: none;
+}
+.filter-subscription-wrapper.locked:hover + .filter-subscription-wrapper {
+  border-top-style: none;
+}
+.dc_subscription.locked:hover .dc_locked_overlay {
+  display: inline-flex;
+}
+.dc_locked_overlay {
+  width: 188px;
+  height: 105px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background: rgba(0, 0, 0, 0.7);
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+}
+.left_dc_subscription {
+  display: flex;
+  flex-direction: row;
+  width: calc(100% - 190px);
+}
+.left_dc_subscription .checkbox {
+  flex-shrink: 0;
+}
+.dc_image_wrapper {
+  position: relative;
+  min-height: 105px;
+  cursor: auto;
+}
+.dc_image_wrapper > img {
+  width: 188px;
+  height: 105px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  box-shadow: 0px 2.5px 10px rgba(0, 0, 0, 0.15);
+  border-radius: 6px;
+}
+.dc_filter_list_title {
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  line-height: normal;
+  margin: 0;
+  padding: 10px 0 15px 0;
+  color: var(--dc-list-title);
+}
+.dc_extra_info {
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: normal;
+  padding-top: 4px;
+}
+.dc_section_padding {
+  padding: 15px;
+  cursor: auto;
+}
+.dc-icons {
+  color: var(--dc-icon-color);
 }
 
 /* SIDEBAR */
