--- a/adblock-betafish/adblock.css
+++ b/adblock-betafish/adblock.css
@@ -9,9 +9,9 @@ Global Styles
 */
 
 :root {
-  --gray1: #333333;
-  --gray2: #666666;
-  --gray3: #999999;
+  --gray1: #333;
+  --gray2: #666;
+  --gray3: #999;
   --gray4: #c6c6c6;
   --gray5: #e6e6e6;
   --gray6: #f4f4f4;
@@ -26,23 +26,23 @@ Global Styles
   --yellow2: #ffae00;
   --yellow3: #ffca00;
   --green: #10b501;
-  --purple: #663399;
+  --purple: #639;
 
   /* Needed for Pop-up Menu */
-  --popup-main-text-color: #333333;
-  --popup-accent-color: #999999;
+  --popup-main-text-color: #333;
+  --popup-accent-color: #999;
   --popup-separator-color: var(--gray5);
-  --popup-accent-hovered-color: #666666;
+  --popup-accent-hovered-color: #666;
   --premium-badge-bg-color: var(--popup-accent-color);
   --premium-badge-text-color: white;
   --premium-badge-border-color: var(--gray3);
   --block-count-color: #e40d0d;
   --popup-background-color: #f4f4f4;
   --popup-card-background-color: white;
-  --popup-url-text-color: #333333;
+  --popup-url-text-color: #333;
   --disabled-link-color: #c6c6c6;
   --popup-help-button-bg-color: #ffca00;
-  --popup-button-text: #666666;
+  --popup-button-text: #666;
   --popup-button-secondary-text: var(--gray2);
   --popup-button-disabled-text: var(--gray3);
   --popup-button-disabled-background-color: var(--gray5);
@@ -56,22 +56,23 @@ Global Styles
   --popup-button-reenable-hovered-bg-color: var(--red1);
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
-  --popup-twitch-icon-color: #663399;
+  --popup-twitch-icon-color: #639;
+
   /* Additional for Options Page */
   --background-color: white;
   --link-color: #2284f7;
-  --main-text-color: #666666;
+  --main-text-color: #666;
   --sidebar-bg-color: #f1f1f1;
   --checkbox-bg-color: #03bcfc;
   --not-selected-checkbox-bg-color: #e6e6e6;
   --bottom-line-color: #e6e6e6;
   --help-icon-color: #c8c8c8;
-  --help-icon-color-hovered: #666666;
+  --help-icon-color-hovered: #666;
   --link-hovered-color: #f30d12;
-  --sidebar-link-hovered-color: #333333;
+  --sidebar-link-hovered-color: #333;
   --customize-dropdown-menu-icon-color: #f30d12;
   --standout-text-color: #f30d12;
-  --active-tab-color: #666666;
+  --active-tab-color: #666;
   --select-language-border-top-width: 1px;
   --unselected-toggle-border-color: #e6e6e6;
   --mab-feature-card-header-locked-bg: #e6e6e6;
@@ -83,22 +84,24 @@ Global Styles
   --options-button-text: white;
   --options-button-bg: #ff363b;
   --options-button-complete-bg: #10b501;
-  --options-premium-badge: #666666;
+  --options-premium-badge: #666;
   --popup-dc-cta-background-color: #ffca00;
   --popup-dc-cta-color: var(--gray1);
   --popup-dc-cta-close-background-color-on-hover: #ffd949;
-  --new-item-icon-text-color: #000000;
+  --new-item-icon-text-color: #000;
   --new-item-icon-bg-color: #ffca00;
+
   /* Defaults for all themes:
      These are all the same for the current themes,
      but might be differentiated in future themes */
-  --teaser-theme-box-color: #666666;
+  --teaser-theme-box-color: #666;
   --mab-button-bg: #ffca00;
   --options-button-bg-hover: #e40d0d;
-  --options-button-disabled-bg: #999999;
-  --options-button-disabled-bg-hover: #666666;
-  --mab-button-text: #333333;
+  --options-button-disabled-bg: #999;
+  --options-button-disabled-bg-hover: #666;
+  --mab-button-text: #333;
   --sync-msg-background-color: #2284f7;
+
   /* Aliases of other properties:
      These are currently all defined by other
      custom properties, but might be further differentiated
@@ -116,8 +119,9 @@ Global Styles
   --sync-msg-color: var(--options-button-text);
   --dc-icon-color: var(--gray1);
   --dc-list-title: var(--gray1);
-  --dc-warning-color: #000000;
+  --dc-warning-color: #000;
   --dc-warning-bg-color: #ffca00;
+
   /* Aliases for Themes CTA:
      normally these are defined by other custom properties, but here they are set
      with the solarized colors since it's the default Theme CTA to use */
@@ -126,20 +130,22 @@ Global Styles
   --popup-themes-cta-background: #003643;
   --popup-themes-cta-background-on-hover: #00a498;
   --popup-themes-cta-color-on-hover: #003643;
+
   /* stats-tab entries */
-  --primary-button-text-color: #ffffff;
+  --primary-button-text-color: #fff;
   --primary-button-bg-color: #e40d0d;
-  --ancillary-button-bg-color: #ffffff;
-  --ancillary-button-text-color: #666666;
-  --primary-panel-bg-color: #ffffff;
+  --ancillary-button-bg-color: #fff;
+  --ancillary-button-text-color: #666;
+  --primary-panel-bg-color: #fff;
   --primary-cta-bg-color: #ffca00;
-  --stats-menu-text-color: #000000;
+  --stats-menu-text-color: #000;
   --ads-blocked-color: #e40d0d;
   --trackers-blocked-color: #03bcfc;
   --ads-replaced-color: #ffae00;
-  --stats-main-text-color: #333333;
-  --stats-overlay-text-color: #666666;
+  --stats-main-text-color: #333;
+  --stats-overlay-text-color: #666;
   --stats-border-color: #c6c6c6;
+
   /* Image Swap entries, that are never 'themed' */
   --icon-notes-main-text-color: white;
   --icon-notes-background-color: #e40d0d;
@@ -147,14 +153,14 @@ Global Styles
 }
 
 * {
-  box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
   margin: 0;
   font-size: 16px;
-  font-style: normal;
   font-family: "Lato", Arial, sans-serif;
+  font-style: normal;
 }
 a {
   text-decoration: none;
@@ -164,14 +170,14 @@ textarea::-webkit-scrollbar {
   width: 14px;
 }
 textarea::-webkit-scrollbar-track {
-  box-shadow: none;
   -webkit-box-shadow: none;
+  box-shadow: none;
 }
 textarea::-webkit-scrollbar-thumb {
-  border-radius: 6px;
   background-color: #e6e6e6;
   background-clip: content-box;
   border: 3px solid transparent;
+  border-radius: 6px;
 }
 
 .inactive {
@@ -196,19 +202,19 @@ Icons global styling (needs to @import 'fonts/font-face.css')
 .adblock-icon,
 .adblock-icons,
 .material-icons {
-  color: #999;
-  cursor: pointer;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px; /* Preferred icon size */
   display: inline-block;
+  color: #999;
+  font-weight: normal;
+  font-size: 24px; /* Preferred icon size */
+  font-style: normal;
   line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
   direction: ltr;
+  letter-spacing: normal;
+  white-space: nowrap;
+  text-transform: none;
   vertical-align: middle;
+  word-wrap: normal;
+  cursor: pointer;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
@@ -225,12 +231,12 @@ Icons global styling (needs to @import 'fonts/font-face.css')
 
 /* Stacking 2 icons */
 .md-stack {
+  position: relative;
   display: inline-block;
-  height: 24px;
   width: 24px;
+  height: 24px;
   font-size: 24px;
   line-height: 24px;
-  position: relative;
   vertical-align: middle;
   cursor: pointer;
 }
@@ -238,8 +244,8 @@ Icons global styling (needs to @import 'fonts/font-face.css')
 /* default circular background for 24px icons */
 .circle-icon-bg-24 {
   background-color: white;
-  clip-path: circle(9.6px);
   -webkit-clip-path: circle(9.6px);
+  clip-path: circle(9.6px);
 }
 
 /* Rules for sizing the icon. */
@@ -322,8 +328,8 @@ Icons global styling (needs to @import 'fonts/font-face.css')
 /* Screen reader only content */
 .sr-only {
   position: absolute;
-  left: -10000px;
   top: auto;
+  left: -10000px;
   width: 1px;
   height: 1px;
   overflow: hidden;
